--- a/public/style/_variables.scss
+++ b/public/style/_variables.scss
@@ -1,5 +1,6 @@
 // Variables
 
-$primary-color: #3EC1D6;
-$primary-color-hover: #1D8F9E;
-$main-btn: #92C9CF;
+$primary-color: #feb41d;
+$primary-color-hover: #e9b24d;
+$main-btn: #A4C9CC;
+$input-text-color: #868e96;
