--- a/public/style/_global.scss
+++ b/public/style/_global.scss
@@ -7,7 +7,11 @@ html, body{
 
 body{
     font-family: 'Raleway', sans-serif;
-    font-size: 17px;
+    font-size: 1rem;
+}
+
+section{
+    padding: 100px 0;
 }
 
 ::-moz-selection {
@@ -27,7 +31,10 @@ body{
 }
 
 .heading-text{
-    margin-bottom: 25px;    
+    text-transform: uppercase;
+    margin-bottom: 25px;
+    font-size: 1.7rem;
+    font-weight: 600;   
 }
 
 .text-vertical-center{
@@ -41,10 +48,6 @@ body{
         margin: 0;
         padding: 0;
     }
-}
-
-.sub-text{
-    opacity: 0.8;
 }
 
 .small{
