--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -21,48 +21,184 @@
     p{
         font-size: 23px;
     }
+}
 
-    /* Ripple Out */
-    @-webkit-keyframes hvr-ripple-out {
-        100% {
-        top: -12px;
-        right: -12px;
-        bottom: -12px;
-        left: -12px;
-        opacity: 0;
-        }
-    }
-    @keyframes hvr-ripple-out {
-        100% {
-        top: -12px;
-        right: -12px;
-        bottom: -12px;
-        left: -12px;
-        opacity: 0;
-        }
-    }
-    .hvr-ripple-out {
-        display: inline-block;
-        vertical-align: middle;
-        -webkit-transform: perspective(1px) translateZ(0);
-        transform: perspective(1px) translateZ(0);
-        box-shadow: 0 0 1px transparent;
-        position: relative;
-        &:before{
-            content: '';
-            position: absolute;
-            border: $primary-color solid 6px;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            -webkit-animation: 1.5s;
-            animation: 1.5s;
+.btn-cont{
+    .btn-more{
+        border-radius: 0;
+        color: #fff !important;
+        padding: 12px 40px;    
+        background-color: $primary-color;
+        text-transform: uppercase;
+        font-size: 1.1rem;
+        font-weight: 600;
+        letter-spacing: 1px;
+    //     &:hover {
+    //         border: none;
+    //         .line-1 {
+    //           animation: move1 1500ms infinite ease;
+    //         }
             
-        }
-        &:hover:before, &:focus:before, &:active:before{
-            -webkit-animation-name: hvr-ripple-out;
-            animation-name: hvr-ripple-out;
-        }
+    //         .line-2 {
+    //           animation: move2 1500ms infinite ease;
+    //         }
+            
+    //         .line-3 {
+    //           animation: move3 1500ms infinite ease;
+    //         }
+            
+    //         .line-4 {
+    //           animation: move4 1500ms infinite ease;
+    //         }
+    //     }
+    // }
+    // .line-1 {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     width: 2px;
+    //     background-color: $main-btn;
+    //     left: 0;
+    //     bottom: 0;
+    // }
+    // .line-2 {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     height: 2px;
+    //     background-color: $main-btn;
+    //     left: 0;
+    //     top: 0;
+    // }
+    // .line-3 {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     width: 2px;
+    //     background-color: $main-btn;
+    //     right: 0;
+    //     top: 0;
+    // }
+    // .line-4 {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     height: 2px;
+    //     background-color: $main-btn;
+    //     right: 0;
+    //     bottom: 0;
+    // }
+    }
+}
+
+// @keyframes move1 {
+//     0% {
+//       height: 100%; 
+//       bottom: 0;
+//     }
+//     54% {
+//       height: 0; 
+//       bottom: 100%;
+//     }
+//     55% {
+//       height: 0; 
+//       bottom: 0;
+//     }
+//     100% {
+//       height: 100%; 
+//       bottom: 0;
+//     }
+// }
+  
+// @keyframes move2 {
+//     0% {
+//       width: 0;
+//       left: 0;
+//     }
+//     50% {
+//       width: 100%; 
+//       left: 0;
+//     }
+//     100% {
+//       width: 0; 
+//       left: 100%;
+//     }
+// }
+  
+// @keyframes move3 {
+//     0% {
+//       height: 100%; 
+//       top: 0;
+//     }
+//     54% {
+//       height: 0; 
+//       top: 100%;
+//     }
+//     55% {
+//       height: 0; 
+//       top: 0;
+//     }
+//     100% {
+//       height: 100%; 
+//       top: 0;
+//     }
+// }
+  
+// @keyframes move4 {
+//     0% {
+//       width: 0; 
+//       right: 0;
+//     }
+//     55% {
+//       width: 100%; 
+//       right: 0;
+//     }
+//     100% {
+//       width: 0; 
+//       right: 100%;
+//     }
+// }
+
+/* Ripple Out */
+@-webkit-keyframes hvr-ripple-out {
+    100% {
+    top: -12px;
+    right: -12px;
+    bottom: -12px;
+    left: -12px;
+    opacity: 0;
+    }
+}
+@keyframes hvr-ripple-out {
+    100% {
+    top: -12px;
+    right: -12px;
+    bottom: -12px;
+    left: -12px;
+    opacity: 0;
+    }
+}
+.hvr-ripple-out {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    position: relative;
+    &:before{
+        content: '';
+        position: absolute;
+        border: #feb41d solid 6px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        -webkit-animation: 1.5s;
+        animation: 1.5s;
+        
+    }
+    &:hover:before, &:focus:before, &:active:before{
+        -webkit-animation-name: hvr-ripple-out;
+        animation-name: hvr-ripple-out;
     }
 }
