--- a/public/style/_contact.scss
+++ b/public/style/_contact.scss
@@ -1,9 +1,6 @@
 // Styling fo contact section
 
 #contact {
-    .section-heading {
-
-    }
     .form-group {
         margin-bottom: 1.67rem;
         input{
@@ -20,6 +17,7 @@
     .form-control{
         font-size: 1rem;
         letter-spacing: 1px;
+        border-radius: 0 !important;
         &:focus {
             border-color: $primary-color;
             box-shadow: none;
