--- a/public/style/_contact.scss
+++ b/public/style/_contact.scss
@@ -15,7 +15,7 @@
         }
     }
     .form-control{
-        font-size: 1rem;
+        font-size: .8rem;
         letter-spacing: 1px;
         border-radius: 0 !important;
         &:focus {
