--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -7,7 +7,7 @@
     height: 100%;
     color: #fff;
     padding-top: 120px;
-    background: url(../img/header.jpg) no-repeat center center scroll;
+    background: url(../img/header.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
