--- a/public/style/style.css
+++ b/public/style/style.css
@@ -41,6 +41,9 @@ section {
 .small {
   max-width: 100px; }
 
+p {
+  font-size: 1.09rem; }
+
 .text-primary {
   color: #feb41d !important; }
 
@@ -181,7 +184,7 @@ section {
   height: 100%;
   color: #fff;
   padding-top: 120px;
-  background: url(../img/header.jpg) no-repeat center center scroll;
+  background: url(../img/header.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -246,8 +249,7 @@ section {
   #products .section-heading {
     margin-bottom: 50px; }
   #products .sub-text {
-    opacity: 0.8;
-    font-size: 1.09rem; }
+    opacity: 0.8; }
 
 #services .heading-text {
   margin-bottom: 75px; }
@@ -312,7 +314,7 @@ section {
   #contact .form-group textarea {
     padding: 1rem; }
 #contact .form-control {
-  font-size: 1rem;
+  font-size: .8rem;
   letter-spacing: 1px;
   border-radius: 0 !important; }
   #contact .form-control:focus {
