--- a/public/style/style.css
+++ b/public/style/style.css
@@ -201,47 +201,15 @@ p {
   border-radius: 0;
   color: #fff !important;
   padding: 12px 40px;
-  background-color: #feb41d;
+  background: linear-gradient(to right, #FEB41E 0%, #f0bf6a 50%, #f5a70a 100%);
+  background-size: 200% auto;
   text-transform: uppercase;
   font-size: 1.1rem;
   font-weight: 600;
-  letter-spacing: 1px; }
-
-/* Ripple Out */
-@-webkit-keyframes hvr-ripple-out {
-  100% {
-    top: -12px;
-    right: -12px;
-    bottom: -12px;
-    left: -12px;
-    opacity: 0; } }
-@keyframes hvr-ripple-out {
-  100% {
-    top: -12px;
-    right: -12px;
-    bottom: -12px;
-    left: -12px;
-    opacity: 0; } }
-.hvr-ripple-out {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  position: relative; }
-  .hvr-ripple-out:before {
-    content: '';
-    position: absolute;
-    border: #feb41d solid 6px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    -webkit-animation: 1.5s;
-    animation: 1.5s; }
-  .hvr-ripple-out:hover:before, .hvr-ripple-out:focus:before, .hvr-ripple-out:active:before {
-    -webkit-animation-name: hvr-ripple-out;
-    animation-name: hvr-ripple-out; }
+  letter-spacing: 1px;
+  transition: background-position 0.5s; }
+  .btn-cont .btn-more:hover {
+    background-position: right center; }
 
 #products {
   background-color: #feb41d;
@@ -280,7 +248,7 @@ p {
     #clients .centered .client-item .client-title.text:hover {
       opacity: 0.6; }
   #clients .centered .client-item img {
-    width: 5rem;
+    width: 6rem;
     -webkit-filter: grayscale(100%);
     /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
@@ -310,7 +278,7 @@ p {
     padding: 1rem;
     color: #868e96; }
   #contact .form-group textarea.form-control {
-    height: 13rem; }
+    height: 12.6rem; }
   #contact .form-group textarea {
     padding: 1rem; }
 #contact .form-control {
