--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -1,6 +1,7 @@
 // Styling for header section
 
 .header{
+    overflow: hidden;
     position: relative;
     display: table;
     width: 100%;
@@ -12,14 +13,63 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    #selfwr-text{
-        color: $primary-color;
-        font-size: 40px;
-        font-weight: 600;
-        height: 70px;
-    }
     p{
         font-size: 23px;
+    }
+    #selfwr-text{
+        height: 80px;
+        .item-1, 
+        .item-2, 
+        .item-3,
+        .item-4 {
+            color: $primary-color;
+            font-weight: 600;
+            font-size: 2.4rem;
+            position: absolute;
+            display: block;
+            width: 100%;
+            animation-duration: 12s;
+            animation-timing-function: ease-in-out;
+            animation-iteration-count: infinite;
+        }
+        
+        .item-1{
+            animation-name: anim-1;
+        }
+        
+        .item-2{
+            animation-name: anim-2;
+        }
+        
+        .item-3{
+            animation-name: anim-3;
+        }
+
+        .item-4{
+            animation-name: anim-4;
+        }
+        
+        @keyframes anim-1 {
+            0%, 8.3% { left: -100%; opacity: 0; }
+            8.3%,25% { left: 0%; opacity: 1; }
+            33.33%, 100% { left: 100%; opacity: 0; }
+            }
+            @keyframes anim-2 {
+            0%, 33.33% { left: -100%; opacity: 0; }
+            41.63%, 58.29% { left: 0%; opacity: 1; }
+            66.66%, 100% { left: 110%; opacity: 0; }
+            }
+            @keyframes anim-3 {
+            0%, 66.66% { left: -100%; opacity: 0; }
+            74.96%, 91.62% { left: 0%; opacity: 1; }
+            100% { left: 110%; opacity: 0; }
+            }
+        
+            @keyframes anim-4 {
+            0%, 99.99% { left: -100%; opacity: 0; }
+            107%, 124% { left: 0%; opacity: 1; }
+            100% { left: 110%; opacity: 0; }
+            }
     }
 }
 
@@ -38,172 +88,5 @@
         &:hover{
             background-position: right center;
         }
-    //     &:hover {
-    //         border: none;
-    //         .line-1 {
-    //           animation: move1 1500ms infinite ease;
-    //         }
-            
-    //         .line-2 {
-    //           animation: move2 1500ms infinite ease;
-    //         }
-            
-    //         .line-3 {
-    //           animation: move3 1500ms infinite ease;
-    //         }
-            
-    //         .line-4 {
-    //           animation: move4 1500ms infinite ease;
-    //         }
-    //     }
-    // }
-    // .line-1 {
-    //     content: "";
-    //     display: block;
-    //     position: absolute;
-    //     width: 2px;
-    //     background-color: $main-btn;
-    //     left: 0;
-    //     bottom: 0;
-    // }
-    // .line-2 {
-    //     content: "";
-    //     display: block;
-    //     position: absolute;
-    //     height: 2px;
-    //     background-color: $main-btn;
-    //     left: 0;
-    //     top: 0;
-    // }
-    // .line-3 {
-    //     content: "";
-    //     display: block;
-    //     position: absolute;
-    //     width: 2px;
-    //     background-color: $main-btn;
-    //     right: 0;
-    //     top: 0;
-    // }
-    // .line-4 {
-    //     content: "";
-    //     display: block;
-    //     position: absolute;
-    //     height: 2px;
-    //     background-color: $main-btn;
-    //     right: 0;
-    //     bottom: 0;
-    // }
     }
 }
-
-// @keyframes move1 {
-//     0% {
-//       height: 100%; 
-//       bottom: 0;
-//     }
-//     54% {
-//       height: 0; 
-//       bottom: 100%;
-//     }
-//     55% {
-//       height: 0; 
-//       bottom: 0;
-//     }
-//     100% {
-//       height: 100%; 
-//       bottom: 0;
-//     }
-// }
-  
-// @keyframes move2 {
-//     0% {
-//       width: 0;
-//       left: 0;
-//     }
-//     50% {
-//       width: 100%; 
-//       left: 0;
-//     }
-//     100% {
-//       width: 0; 
-//       left: 100%;
-//     }
-// }
-  
-// @keyframes move3 {
-//     0% {
-//       height: 100%; 
-//       top: 0;
-//     }
-//     54% {
-//       height: 0; 
-//       top: 100%;
-//     }
-//     55% {
-//       height: 0; 
-//       top: 0;
-//     }
-//     100% {
-//       height: 100%; 
-//       top: 0;
-//     }
-// }
-  
-// @keyframes move4 {
-//     0% {
-//       width: 0; 
-//       right: 0;
-//     }
-//     55% {
-//       width: 100%; 
-//       right: 0;
-//     }
-//     100% {
-//       width: 0; 
-//       right: 100%;
-//     }
-// }
-
-// /* Ripple Out */
-// @-webkit-keyframes hvr-ripple-out {
-//     100% {
-//     top: -12px;
-//     right: -12px;
-//     bottom: -12px;
-//     left: -12px;
-//     opacity: 0;
-//     }
-// }
-// @keyframes hvr-ripple-out {
-//     100% {
-//     top: -12px;
-//     right: -12px;
-//     bottom: -12px;
-//     left: -12px;
-//     opacity: 0;
-//     }
-// }
-// .hvr-ripple-out {
-//     display: inline-block;
-//     vertical-align: middle;
-//     -webkit-transform: perspective(1px) translateZ(0);
-//     transform: perspective(1px) translateZ(0);
-//     box-shadow: 0 0 1px transparent;
-//     position: relative;
-//     &:before{
-//         content: '';
-//         position: absolute;
-//         border: #feb41d solid 6px;
-//         top: 0;
-//         right: 0;
-//         bottom: 0;
-//         left: 0;
-//         -webkit-animation: 1.5s;
-//         animation: 1.5s;
-        
-//     }
-//     &:hover:before, &:focus:before, &:active:before{
-//         -webkit-animation-name: hvr-ripple-out;
-//         animation-name: hvr-ripple-out;
-//     }
-// }
