--- a/public/style/style.css
+++ b/public/style/style.css
@@ -178,6 +178,7 @@ p {
           width: 2rem;
           height: 2rem; } }
 .header {
+  overflow: hidden;
   position: relative;
   display: table;
   width: 100%;
@@ -189,14 +190,71 @@ p {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
-  .header #selfwr-text {
-    color: #feb41d;
-    font-size: 40px;
-    font-weight: 600;
-    height: 70px; }
   .header p {
     font-size: 23px; }
-
+  .header #selfwr-text {
+    height: 80px; }
+    .header #selfwr-text .item-1,
+    .header #selfwr-text .item-2,
+    .header #selfwr-text .item-3,
+    .header #selfwr-text .item-4 {
+      color: #feb41d;
+      font-weight: 600;
+      font-size: 2.4rem;
+      position: absolute;
+      display: block;
+      width: 100%;
+      animation-duration: 12s;
+      animation-timing-function: ease-in-out;
+      animation-iteration-count: infinite; }
+    .header #selfwr-text .item-1 {
+      animation-name: anim-1; }
+    .header #selfwr-text .item-2 {
+      animation-name: anim-2; }
+    .header #selfwr-text .item-3 {
+      animation-name: anim-3; }
+    .header #selfwr-text .item-4 {
+      animation-name: anim-4; }
+@keyframes anim-1 {
+  0%, 8.3% {
+    left: -100%;
+    opacity: 0; }
+  8.3%,25% {
+    left: 0%;
+    opacity: 1; }
+  33.33%, 100% {
+    left: 100%;
+    opacity: 0; } }
+@keyframes anim-2 {
+  0%, 33.33% {
+    left: -100%;
+    opacity: 0; }
+  41.63%, 58.29% {
+    left: 0%;
+    opacity: 1; }
+  66.66%, 100% {
+    left: 110%;
+    opacity: 0; } }
+@keyframes anim-3 {
+  0%, 66.66% {
+    left: -100%;
+    opacity: 0; }
+  74.96%, 91.62% {
+    left: 0%;
+    opacity: 1; }
+  100% {
+    left: 110%;
+    opacity: 0; } }
+@keyframes anim-4 {
+  0%, 99.99% {
+    left: -100%;
+    opacity: 0; }
+  107%, 124% {
+    left: 0%;
+    opacity: 1; }
+  100% {
+    left: 110%;
+    opacity: 0; } }
 .btn-cont .btn-more {
   border-radius: 0;
   color: #fff !important;
