--- a/public/style/_global.scss
+++ b/public/style/_global.scss
@@ -8,6 +8,7 @@ html, body{
 body{
     font-family: 'Raleway', sans-serif;
     font-size: 1rem;
+    overflow-x: hidden;
 }
 
 section{
@@ -28,6 +29,7 @@ section{
 
 *:focus{
      outline: none !important;
+     box-shadow: none !important;
 }
 
 .heading-text{
