--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -1,7 +1,6 @@
 // Styling for header section
 
 .header{
-    overflow: hidden;
     position: relative;
     display: table;
     width: 100%;
@@ -87,6 +86,10 @@
         transition: background-position 0.5s;
         &:hover{
             background-position: right center;
+        }
+        &:active{
+            background-color: lime !important;
+            border-color: $primary-color;
         }
     }
 }
