--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -87,9 +87,48 @@
         &:hover{
             background-position: right center;
         }
-        &:active{
-            background-color: lime !important;
-            border-color: $primary-color;
-        }
     }
 }
+
+// /* Ripple Out */
+// @-webkit-keyframes hvr-ripple-out {
+//     100% {
+//     top: -12px;
+//     right: -12px;
+//     bottom: -12px;
+//     left: -12px;
+//     opacity: 0;
+//     }
+// }
+// @keyframes hvr-ripple-out {
+//     100% {
+//     top: -12px;
+//     right: -12px;
+//     bottom: -12px;
+//     left: -12px;
+//     opacity: 0;
+//     }
+// }
+// .hvr-ripple-out {
+//     display: inline-block;
+//     vertical-align: middle;
+//     -webkit-transform: perspective(1px) translateZ(0);
+//     transform: perspective(1px) translateZ(0);
+//     box-shadow: 0 0 1px transparent;
+//     position: relative;
+//     &:before{
+//         content: '';
+//         position: absolute;
+//         border: $primary-color solid 6px;
+//         top: 0;
+//         right: 0;
+//         bottom: 0;
+//         left: 0;
+//         -webkit-animation: 1.5s;
+//         animation: 1.5s;  
+//     }
+//     &:focus:before, &:active:before{
+//         -webkit-animation-name: hvr-ripple-out;
+//         animation-name: hvr-ripple-out;
+//     }
+// }
