--- a/public/style/_variables.scss
+++ b/public/style/_variables.scss
@@ -1,6 +1,6 @@
 // Variables
 
 $primary-color: #feb41d;
-$primary-color-hover: #e9b24d;
+$primary-color-hover: #faa108;
 $main-btn: #A4C9CC;
 $input-text-color: #868e96;
