--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -19,8 +19,7 @@
         height: 80px;
         .item-1, 
         .item-2, 
-        .item-3,
-        .item-4 {
+        .item-3 {
             color: $primary-color;
             font-weight: 600;
             font-size: 2.4rem;
@@ -43,32 +42,51 @@
         .item-3{
             animation-name: anim-3;
         }
-
-        .item-4{
-            animation-name: anim-4;
-        }
         
-        @keyframes anim-1 {
+        @-webkit-keyframes anim-1{
             0%, 8.3% { left: -100%; opacity: 0; }
-            8.3%,25% { left: 0%; opacity: 1; }
+            8.3%, 25% { left: 0%; opacity: 1; }
             33.33%, 100% { left: 100%; opacity: 0; }
-            }
-            @keyframes anim-2 {
+        }
+
+        @-webkit-keyframes anim-2 {
             0%, 33.33% { left: -100%; opacity: 0; }
             41.63%, 58.29% { left: 0%; opacity: 1; }
-            66.66%, 100% { left: 110%; opacity: 0; }
-            }
-            @keyframes anim-3 {
+            66.66%, 100% { left: 100%; opacity: 0; }
+        }
+
+        @-webkit-keyframes anim-3{
             0%, 66.66% { left: -100%; opacity: 0; }
             74.96%, 91.62% { left: 0%; opacity: 1; }
-            100% { left: 110%; opacity: 0; }
-            }
+            100% { left: 100%; opacity: 0; }
+        }
+
+        // @-webkit-keyframes anim-4 {
+        //     0%, 99.99% { left: -100%; opacity: 0; }
+        //     107%, 124% { left: 0%; opacity: 1; }
+        //     100% { left: 110%; opacity: 0; }
+        // }
+        @keyframes anim-1 {
+            0%, 8.3% { left: -100%; opacity: 0; }
+            8.3%, 25% { left: 0%; opacity: 1; }
+            33.33%, 100% { left: 100%; opacity: 0; }
+        }
         
-            @keyframes anim-4 {
-            0%, 99.99% { left: -100%; opacity: 0; }
-            107%, 124% { left: 0%; opacity: 1; }
-            100% { left: 110%; opacity: 0; }
-            }
+        @keyframes anim-2 {
+            0%, 33.33% { left: -100%; opacity: 0; }
+            41.63%, 58.29% { left: 0%; opacity: 1; }
+            66.66%, 100% { left: 100%; opacity: 0; }
+        }
+        @keyframes anim-3 {
+            0%, 66.66% { left: -100%; opacity: 0; }
+            74.96%, 91.62% { left: 0%; opacity: 1; }
+            100% { left: 100%; opacity: 0; }
+        }
+        // @keyframes anim-4 {
+        //     0%, 99.99% { left: -100%; opacity: 0; }
+        //     107%, 124% { left: 0%; opacity: 1; }
+        //     100% { left: 110%; opacity: 0; }
+        // }
     }
 }
 
