--- a/public/style/_clients.scss
+++ b/public/style/_clients.scss
@@ -9,34 +9,39 @@
         display: flex;
         align-items: center;
         .client-item{
+            transition: 1s ease;
+            width: 6rem;
+            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+            filter: grayscale(100%);
+            background-color:white;
+            mix-blend-mode: multiply;
+            transition: 400ms;
+            opacity: 0.9;
+            &:hover{
+                opacity: .6;
+                -webkit-transform: scale(1.2);
+                -ms-transform: scale(1.2);
+                transform: scale(1.2);
+                transition: 1s ease;
+            }
             .client-title.text{
                 font-family: "Cormorant Garamond";
                 font-size: 25px;
                 letter-spacing: 3px;
                 margin-left: 8px;
                 transition: 400ms;
-                opacity: 0.8;
+                opacity: 1.2;
                 cursor: default;
                 &:hover{
                     opacity: 0.6;
                 }
             }
             img{
-                width: 6rem;
-                -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-                filter: grayscale(100%);
-                background-color:white;
-                mix-blend-mode: multiply;
-                transition: 400ms;
-                opacity: 0.9;
-                &:hover{
-                    opacity: .6;
-                }
+                
                 img>&:nth-child(4) {
                     width: 20px;
                 }
             }
         }
-       
     }
 }
